完成主页当前选项卡的选定，请模仿home.html的最后面的script里的内容，修改当前高亮的选卡

--- a/application/index/view/footer.html
+++ b/application/index/view/footer.html
@@ -1,14 +1,15 @@
 
 <!--底部栏-->
+<div style="height: 80px"></div>
 <section class="footer">
     <div class="container" >
         <div class="col-md-4">
-            <p style="margin-top: 30px;font-size: 20px;color: white">猪客网，程序员必备求职神器</p>
+            <p style="margin-top: 30px;font-size: 20px;color: white">E客网，程序员必备求职神器</p>
             <p>QQ群：169195721</p>
             <p>微 信：www_nowcoder_com
                 <input type="button" class="btn-primary footer_btn" value="关注">
             </p>
-            <p>微 博：猪客网
+            <p>微 博：E客网
                 <input type="button" class="btn-primary footer_btn" value="关注">
             </p>
         </div>
@@ -29,7 +30,7 @@
                 </ul>
                 <p style="clear: both;padding-top: 20px">浙ICP备14000860号-2</p>
                 <p> 京公网安备 110114020100785</p>
-                <p>牛客网©2017 All Rights Reserved</p>
+                <p>E客网©2017 All Rights Reserved</p>
             </div>
         </div>
     </div>
