--- a/application/index/view/index/home.html
+++ b/application/index/view/index/home.html
@@ -96,7 +96,7 @@
         </h3>
         <ul class="class_list">
             <li class="class_li">
-                <a href="" class="a_div">
+                <a href="{:url('../public/index/course_detail/courseDetail')}" class="a_div">
                     <img src="https://img1.mukewang.com/szimg/5a16336900014ca405400300.jpg" alt="" class="class_img">
                     <p class="class_description">Java企业级电商项目架构演进之路  Tomcat集群与Redis分布式</p>
                 </a>
@@ -143,7 +143,7 @@
         </h3>
         <ul class="class_list">
             <li class="class_li">
-                <a href="" class="a_div">
+                <a href="#" class="a_div">
                     <img src="https://img1.mukewang.com/szimg/5a16336900014ca405400300.jpg" alt="" class="class_img">
                     <p class="class_description">Java企业级电商项目架构演进之路  Tomcat集群与Redis分布式</p>
                 </a>
@@ -355,3 +355,8 @@
     </div>
 </div>
 {include file="footer"}
+
+<script>
+    //导航栏的选中显示，请修改下面的这行代码，在自己负责的页面部分，写入响应的id
+    $('#home').addClass("active");
+</script>
