--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -31,12 +31,12 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="{:url('../public/index/index/home')}">首页</a></li>
-                    <li><a href="#">题库</a></li>
-                    <li><a href="#">课程</a></li>
-                    <li><a href="#">求职</a></li>
-                    <li><a href="#">IT</a></li>
-                    <li><a href="{:url('../public/forum/forum/forum')}">讨论区</a></li>
+                    <li id= "home" class="navbar_li"><a href="{:url('../public/index/index/home')}">首页</a></li>
+                    <li id="questionBank" class="navbar_li"><a href="#" >题库</a></li>
+                    <li id="course" class="navbar_li"><a href="#">课程</a></li>
+                    <li id="job" class="navbar_li"><a href="#">求职</a></li>
+                    <li id="it" class="navbar_li"><a href="#">IT</a></li>
+                    <li id="forum" class="navbar_li"><a href="{:url('../public/forum/forum/forum')}">讨论区</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
