修改帖子的表字段，添加分页，分类

--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -55,7 +55,7 @@
                                 <a href="{:url('userManage/login')}">登陆</a>
                             </li>
                             <li>
-                                <a href="{:url('userManage/register')}">注册</a>
+                                <a href="{:url('../public/index/userManage/register')}">注册</a>
                             </li>
                         </ul>
                     </li>
