--- a/application/forum/view/Forum/forum.html
+++ b/application/forum/view/Forum/forum.html
@@ -3,21 +3,28 @@
 	<div>
 		<h2>论坛</h2>
 		<a href="{:url('publish')}" class="btn btn-success">发帖</a>
-<br>
 	</div>
+	<div class="row">
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+  <div class="col-md-1">.col-md-1</div>
+</div>
 	<table class="table table-hover">
 		<tr>
-			<th>编号</th>
+			<th>类型</th>
 			<th>贴子标题</th>
 			<th>操作</th>
 		</tr>
-		{foreach $post_list as $info}
+		{volist name = 'post_list' id = 'info'}
 		<tr>
-			<td>{$info.post_id}</td>
+			<td>{$info.cat_name}</td>
 			<td>{$info.post_title}</td>
 			<td><a href="{:url('preview',['post_id'=>$info.post_id])}" class="btn btn-info" target="_blank">预览</a></td>
 		</tr>
-		{/foreach}
+		{/volist}
 	</table>
+	{$post_list->render()}
 </div>
 {include file="../application/index/view/footer.html"}
