完成润锋要的布局

--- a/application/index/view/course_detail/courseDetail.html
+++ b/application/index/view/course_detail/courseDetail.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="_PUBLIC_/static/index/css/courseDetail.css">
 
 <div class="img_box">
-    <img src="https://static.nowcoder.com/images/courses/dl1_960200.jpg" alt="" class="top_img">
+    <img src="_PUBLIC_static/index/img/course.jpg" alt="" class="top_img">
 </div>
 <div class="container" style="margin-top: 40px" >
     <div class="col-md-8">
