--- a/application/index/view/index/home.html
+++ b/application/index/view/index/home.html
@@ -356,6 +356,7 @@
 </div>
 {include file="footer"}
 
+<!--请在你写的html末尾加上下面这个script,并且修改响应的id-->
 <script>
     //导航栏的选中显示，请修改下面的这行代码，在自己负责的页面部分，写入响应的id
     $('#home').addClass("active");
