--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -36,7 +36,7 @@
                     <li id="course" class="navbar_li"><a href="#">课程</a></li>
                     <li id="job" class="navbar_li"><a href="#">求职</a></li>
                     <li id="it" class="navbar_li"><a href="#">IT</a></li>
-                    <li id="forum" class="navbar_li"><a href="{:url('../public/forum/forum/forum')}">讨论区</a></li>
+                    <li id="forum" class="navbar_li"><a href="{:url('../public/forum/forum/forum?aa=2')}">讨论区</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
@@ -49,17 +49,8 @@
                             </span>
                         </div>
                     </li>
-                    <li class="no_login">
-                        <ul class="ul_bar">
-                            <li>
-                                <a href="{:url('userManage/login')}">登陆</a>
-                            </li>
-                            <li>
-                                <a href="{:url('../public/index/userManage/register')}">注册</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="have_login">
+					{if $Think.session.uinfo}
+					<li class="have_login">
                         <a href="#">
                             <i class="fa fa-envelope" aria-hidden="true" style=""></i> &nbsp;消息
                         </a>
@@ -75,6 +66,18 @@
                             </ul>
                         </div>
                     </li>
+					{else}
+                    <li class="no_login" >
+                        <ul class="ul_bar">
+						<li>
+									<a href="{:url('userManage/login')}">登陆</a>
+								</li>
+								<li>
+									<a href="{:url('../public/index/userManage/register')}">注册</a>
+								</li>
+                        </ul>
+                    </li>
+                   {/if}
                 </ul>
             </div>
         </div>
