--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -33,7 +33,7 @@
                 <ul class="nav navbar-nav">
                     <li id= "home" class="navbar_li"><a href="{:url('../public/index/index/home')}">首页</a></li>
                     <li id="questionBank" class="navbar_li"><a href="#" >题库</a></li>
-                    <li id="course" class="navbar_li"><a href="#">课程</a></li>
+                    <li id="course" class="navbar_li"><a href="{:url('../public/index/course/course')}">课程</a></li>
                     <li id="job" class="navbar_li"><a href="#">求职</a></li>
                     <li id="it" class="navbar_li"><a href="#">IT</a></li>
                     <li id="forum" class="navbar_li"><a href="{:url('../public/forum/forum/forum?aa=2')}">讨论区</a></li>
