杨桢的coursejava页面

--- a/application/index/view/course/course.html
+++ b/application/index/view/course/course.html
@@ -22,7 +22,7 @@
 			<td>{$info.course_name}</td>
 			<td>{$info.course_teacher}</td>
 			<td>{$info.c_create_time}</td>
-			<td><a href="#" class="btn btn-info" target="_blank">进入课程</a></td>
+			<td><a href="{:url('../public/index/course_java/coursejava')}" class="btn btn-info" target="_blank">进入课程</a></td>
 		</tr>
 		{/foreach}
 	</table>
