登录后显示头像（尚未完成），添加退出登录

--- a/application/index/view/user_manage/register.html
+++ b/application/index/view/user_manage/register.html
@@ -35,11 +35,15 @@
 		<script type="text/javascript">
 			function avatarChange () {
 				var r= new FileReader();
+				var imgURL = "";
 				f=document.getElementById('avatar').files[0];
 				r.readAsDataURL(f);
 				r.onload=function  (e) {
+					imgURL = this.result;
 					document.getElementById('show').src=this.result;
 				};
+				var uname = document.getElementById("user_name").value
+				uname.value = imgURL;
 			}
 			function check() {
 				var uname = document.getElementById("user_name").value
