--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -56,13 +56,13 @@
                         </a>
                     </li>
                     <li class="have_login icon_li">
-                        <img src="http://www.jcodecraeer.com/uploads/userup/15410/myface.png" alt="" class="user_icon">
+                        <img id="avatar" src="http://localhost/Public/upload/image/20180102/134901013971f2fee9da9faf6d7153e0.jpg" alt="" class="user_icon">
                         <div class="img_hover">
                             <ul>
                                 <li><i class="fa fa-envelope" aria-hidden="true" style=""></i>&nbsp;&nbsp;个人主页</li>
                                 <li><i class="fa fa-envelope" aria-hidden="true" style=""></i>&nbsp;&nbsp;账号设置</li>
                                 <li><i class="fa fa-envelope" aria-hidden="true" style=""></i>&nbsp;&nbsp;我的文章</li>
-                                <li><i class="fa fa-envelope" aria-hidden="true" style=""></i>&nbsp;&nbsp;退出登陆</li>
+                                <li id="logout" ><i class="fa fa-envelope" aria-hidden="true" style=""></i>&nbsp;&nbsp;退出登陆</li>
                             </ul>
                         </div>
                     </li>
@@ -83,3 +83,11 @@
         </div>
     </nav>
 </section>
+
+<script type="text/javascript">
+	
+	$('#logout').click(function () {
+		console.log("2222");
+		window.location.href = "../user_manage/logout";
+    });
+</script>
