--- a/application/forum/view/Forum/forum.html
+++ b/application/forum/view/Forum/forum.html
@@ -14,7 +14,7 @@
 		<tr>
 			<td>{$info.cat_name}</td>
 			<td>{$info.post_title}</td>
-			<td><a href="{:url('preview',['post_id'=>$info.post_id])}" class="btn btn-info" target="_blank">预览</a></td>
+			<td><a href="{:url('preview',['post_id'=>$info.post_id])}" class="btn btn-info" target="_blank">查看</a></td>
 		</tr>
 		{/volist}
 	</table>
