--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -36,7 +36,7 @@
                     <li id="course" class="navbar_li"><a href="{:url('../public/index/course/course')}">课程</a></li>
                     <li id="job" class="navbar_li"><a href="#">求职</a></li>
                     <li id="it" class="navbar_li"><a href="#">IT</a></li>
-                    <li id="forum" class="navbar_li"><a href="{:url('../public/forum/forum/forum?aa=2')}">讨论区</a></li>
+                    <li id="forum" class="navbar_li"><a href="{:url('../public/forum/forum/forum')}">讨论区</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
@@ -92,7 +92,6 @@
 	
 	
 	$('#logout').click(function () {
-		console.log("2222");
-		window.location.href = "../user_manage/logout";
+		window.location.href = "../../index/user_manage/logout";
     });
 </script>
