--- a/application/index/view/user_manage/register.html
+++ b/application/index/view/user_manage/register.html
@@ -3,7 +3,7 @@
 	<div class = "box" style="margin: 0 auto;margin-top: 50px;margin-bottom: 50px;width:400px;">
 		<form action = "{:url('doRegister')}" onsubmit="return check()" enctype="multipart/form-data" method="post">
 			<div style = "height:100px;width:400px;">
-				<img  id="show" style = "height:100px;width:100px;margin:auto;float:right"/>
+				<img  id="show" src="http://localhost/uploads/default/avatar.jpg" style = "height:100px;width:100px;margin:auto;float:right"/>
 				<div style = "width:calc(100% - 100px);height:100px;float:left;position:relative;">
 					<input type="file" name="avatar" id="avatar" onchange="avatarChange()" 
 					style = "position: absolute;bottom: calc(50% - 13px); " />
