--- a/application/forum/view/Forum/preview.html
+++ b/application/forum/view/Forum/preview.html
@@ -1,4 +1,8 @@
 {include file="../application/index/view/header.html"}
-	<h2>{$info.post_title}</h2>
-	<div>{$info.post_content}</div>
+	<div class="form-group" style="text-align:center">
+				<h2>{$info.post_title}</h2>
+	</div class="form-group">
+	<div class="form-group" style="text-align:center;margin-top:20px">
+				<div>{$info.post_content}</div>
+	</div class="form-group">
 {include file="../application/index/view/footer.html"}
