--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -59,7 +59,7 @@
                         <img id="avatar" src="http://localhost/Public/upload/image/20180102/134901013971f2fee9da9faf6d7153e0.jpg" alt="" class="user_icon">
                         <div class="img_hover">
                             <ul>
-                                <li><i class="fa fa-envelope" aria-hidden="true" style=""></i>&nbsp;&nbsp;个人主页</li>
+                                <li id = "person"><i class="fa fa-envelope" aria-hidden="true" style=""></i>&nbsp;&nbsp;个人主页</li>
                                 <li><i class="fa fa-envelope" aria-hidden="true" style=""></i>&nbsp;&nbsp;账号设置</li>
                                 <li><i class="fa fa-envelope" aria-hidden="true" style=""></i>&nbsp;&nbsp;我的文章</li>
                                 <li id="logout" ><i class="fa fa-envelope" aria-hidden="true" style=""></i>&nbsp;&nbsp;退出登陆</li>
@@ -93,5 +93,9 @@
 	
 	$('#logout').click(function () {
 		window.location.href = "../../index/user_manage/logout";
+    });
+	
+	$('#person').click(function () {
+		window.location.href = "../../index/user_manage/person";
     });
 </script>
