--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -26,7 +26,7 @@
         <!-- We use the fluid option here to avoid overriding the fixed width of a normal container within the narrow content columns. -->
         <div class="container">
             <div class="navbar-header brand">
-                <a class="navbar-brand icon" href="#">E客网</a>
+                <a class="navbar-brand icon" href="{:url('../public/index/index/home')}">E客网</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
@@ -59,10 +59,10 @@
                         <img id="avatar" src="http://localhost/Public/upload/image/20180102/134901013971f2fee9da9faf6d7153e0.jpg" alt="" class="user_icon">
                         <div class="img_hover">
                             <ul>
-                                <li id = "person"><i class="fa fa-envelope" aria-hidden="true" style=""></i>&nbsp;&nbsp;个人主页</li>
-                                <li><i class="fa fa-envelope" aria-hidden="true" style=""></i>&nbsp;&nbsp;账号设置</li>
-                                <li><i class="fa fa-envelope" aria-hidden="true" style=""></i>&nbsp;&nbsp;我的文章</li>
-                                <li id="logout" ><i class="fa fa-envelope" aria-hidden="true" style=""></i>&nbsp;&nbsp;退出登陆</li>
+                                <li><i class="fa fa-user" aria-hidden="true" style=""></i>&nbsp;&nbsp;个人主页</li>
+                                <li><i class="fa fa-cog" aria-hidden="true" style=""></i>&nbsp;&nbsp;账号设置</li>
+                                <li><i class="fa fa-cog" aria-hidden="true" style=""></i>&nbsp;&nbsp;我的文章</li>
+                                <li id="logout" ><i class="fa fa-power-off" aria-hidden="true" style=""></i>&nbsp;&nbsp;退出登陆</li>
                             </ul>
                         </div>
                     </li>
