--- a/application/index/view/user_manage/login.html
+++ b/application/index/view/user_manage/login.html
@@ -19,7 +19,7 @@
 	</div>
 	<script type="text/javascript">
 		function check() {
-			var uname = $('[name="user_name"').val()
+			var uname = $('[name="user_name"]').val()
 			var pwd = $('.pwd').val()
 			// alert(pwd)
 			if (pwd == '' || uname=='') {
