--- a/application/index/view/question_bank/questionBank.html
+++ b/application/index/view/question_bank/questionBank.html
@@ -4,7 +4,7 @@
 <div class="container" style="margin-top: 30px">
     <h4>职位：</h4>
     <ul class="company_list">
-        <li><p class="position">java工程师</p></li>
+        <li id="java"><p class="position">java工程师</p></li>
         <li><p class="position">java工程师</p></li>
         <li><p class="position">java工程师</p></li>
         <li><p class="position">java工程师</p></li>
@@ -124,4 +124,32 @@
 <script>
     //导航栏的选中显示，请修改下面的这行代码，在自己负责的页面部分，写入响应的id
     $('#questionBank').addClass("active");
+    $('#java').click(function () {
+        var allUnivList = [{
+            "id": 3,
+            "univs": [{
+                "id": 1001,
+                "name": "清华大学"
+            },
+                {
+                    "id": 1002,
+                    "name": "北京大学"
+                }],
+            "country_id": 0,
+            "name": "北京"
+        }]
+        $.ajax({
+            url: "../public/index/question_bank.php?action = 'getdata'",
+            type: "post",
+            data: { allcity: allUnivList},
+            success: function (data) {
+                alert(data);
+                console.log(data)
+            },
+            error: function () {
+                alert("系统异常!");
+            }
+        });
+    })
+
 </script>
