--- a/public/static/index/css/home.css
+++ b/public/static/index/css/home.css
@@ -138,6 +138,7 @@
 /*文章模块*/
 .article_section{
     margin-top: 100px;
+    padding-bottom: 50px;
     background-color: white;
     box-shadow: 0px -5px 5px 2px rgba(7,17,27,.06);
 }
