--- a/application/index/view/user_manage/person.html
+++ b/application/index/view/user_manage/person.html
@@ -5,7 +5,7 @@
 			<div style = "height:100px;width:400px;">
 				<img  id="show" src="http://localhost/uploads/{$user_info.avatar}" style = "height:100px;width:100px;margin:auto;float:right"/>
 				<div style = "width:calc(100% - 100px);height:100px;float:left;position:relative;">
-					<input type="file" name="avatar" id="avatar" onchange="avatarChange()" 
+					<input type="file" name="avatar" id="_avatar" onchange="avatarChange()" 
 					style = "position: absolute;bottom: calc(50% - 13px); " />
 				</div>
 			</div>
@@ -27,13 +27,12 @@
 			function avatarChange () {
 				var r= new FileReader();
 				var imgURL = "";
-				f=document.getElementById('avatar').files[0];
+				f=document.getElementById('_avatar').files[0];
 				r.readAsDataURL(f);
 				r.onload=function  (e) {
 					imgURL = this.result;
 					document.getElementById('show').src=this.result;
 				};
-				var uname = document.getElementById("user_name").value
 			}
 		</script>
 {include file="../application/index/view/footer.html"}
