--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
                 <ul class="nav navbar-nav">
                     <li id= "home" class="navbar_li"><a href="{:url('../public/index/index/home')}">首页</a></li>
-                    <li id="questionBank" class="navbar_li"><a href="#" >题库</a></li>
+                    <li id="questionBank" class="navbar_li"><a href="{:url('../public/index/Question_bank/questionBank')}" >题库</a></li>
                     <li id="course" class="navbar_li"><a href="{:url('../public/index/course/course')}">课程</a></li>
                     <li id="job" class="navbar_li"><a href="#">求职</a></li>
                     <li id="it" class="navbar_li"><a href="#">IT</a></li>
