--- a/application/index/view/question_bank/questionBank.html
+++ b/application/index/view/question_bank/questionBank.html
@@ -1,112 +1,79 @@
-{include file="header"}
-<!--引入css样式文件-->
-<link rel="stylesheet" href="_PUBLIC_/static/index/css/question.css">
-<div class="container" style="margin-top: 30px">
-    <h4>职位：</h4>
-    <ul class="company_list">
-        <li id="java"><p class="position">java工程师</p></li>
-        <li><p class="position">java工程师</p></li>
-        <li><p class="position">java工程师</p></li>
-        <li><p class="position">java工程师</p></li>
-        <li><p class="position">java工程师</p></li>
-        <li><p class="position">java工程师</p></li>
-        <li><p class="position">java工程师</p></li>
-        <li><p class="position">java工程师</p></li>
-        <li><p class="position">java工程师</p></li>
-    </ul>
-    <h4 style="clear: both">方向:</h4>
-    <ul class="company_list">
-        <li><p class="position">java工程师</p></li>
-        <li><p class="position">java工程师</p></li>
-        <li><p class="position">java工程师</p></li>
-        <li><p class="position">java工程师</p></li>
-        <li><p class="position">java工程师</p></li>
-        <li><p class="position">java工程师</p></li>
-        <li><p class="position">java工程师</p></li>
-        <li><p class="position">java工程师</p></li>
-        <li><p class="position">java工程师</p></li>
-    </ul>
-</div>
-<div class="container" style="clear: both">
-    <span style="float: left;padding: 5px;font-size: 16px">已选择分类： </span>
-    <ul class="company_list">
-        <li><p class="position">java工程师</p></li>
-        <li><p class="position">java工程师</p></li>
-    </ul>
-</div>
+{include file="header1"}
+
 
 <div class="container" style="background-color: white;padding-top: 20px">
     <div class="queueBox">
         <ul class="queueList">
+           
             <li class="queue_ist">
-                <h4 class="question_title">京东真题</h4>
-                <img  class="question_img" src="https://static.nowcoder.com/images/weblogo/color_logo/jd-80x80.png" alt="">
-                <p class="heat">热度指数： 123</p>
+                <h6 class="question_title">迅雷2017校招java笔试题</h6>
+                <img  class="question_img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1515033894261&di=1d115b62d84a521d74cf1ee4fec795cf&imgtype=0&src=http%3A%2F%2Fpic.58pic.com%2F58pic%2F14%2F38%2F52%2F07s58PICpmG_1024.jpg" alt="">
+                <p class="heat">热度指数： 100</p>
                 <div class="check">
-                    <p class="total">共88道题</p>
+                    <p class="total">共15道题</p>
                     <input type="button" class="btn btn-success check_btn" value="查看详情">
                 </div>
             </li>
             <li class="queue_ist">
-                <h4 class="question_title">京东真题</h4>
-                <img  class="question_img" src="https://static.nowcoder.com/images/weblogo/color_logo/jd-80x80.png" alt="">
-                <p class="heat">热度指数： 123</p>
+                <h6 class="question_title">YY2017校招java笔试题</h6>
+                <img  class="question_img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1515033894261&di=1d115b62d84a521d74cf1ee4fec795cf&imgtype=0&src=http%3A%2F%2Fpic.58pic.com%2F58pic%2F14%2F38%2F52%2F07s58PICpmG_1024.jpg" alt="">
+                <p class="heat">热度指数： 223</p>
                 <div class="check">
-                    <p class="total">共88道题</p>
+                    <p class="total">共9道题</p>
                     <input type="button" class="btn btn-success check_btn" value="查看详情">
                 </div>
             </li>
             <li class="queue_ist">
-                <h4 class="question_title">京东真题</h4>
-                <img  class="question_img" src="https://static.nowcoder.com/images/weblogo/color_logo/jd-80x80.png" alt="">
-                <p class="heat">热度指数： 123</p>
+                <h6 class="question_title">腾讯2017秋招测试笔试题</h6>
+                <img  class="question_img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1515033894261&di=1d115b62d84a521d74cf1ee4fec795cf&imgtype=0&src=http%3A%2F%2Fpic.58pic.com%2F58pic%2F14%2F38%2F52%2F07s58PICpmG_1024.jpg" alt="">
+                <p class="heat">热度指数： 12</p>
                 <div class="check">
-                    <p class="total">共88道题</p>
+                    <p class="total">共15道题</p>
                     <input type="button" class="btn btn-success check_btn" value="查看详情">
                 </div>
             </li>
             <li class="queue_ist">
-                <h4 class="question_title">京东真题</h4>
-                <img  class="question_img" src="https://static.nowcoder.com/images/weblogo/color_logo/jd-80x80.png" alt="">
-                <p class="heat">热度指数： 123</p>
+                <h6 class="question_title">YY2017校招后端笔试题</h6>
+                <img  class="question_img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1515033894261&di=1d115b62d84a521d74cf1ee4fec795cf&imgtype=0&src=http%3A%2F%2Fpic.58pic.com%2F58pic%2F14%2F38%2F52%2F07s58PICpmG_1024.jpg" alt="">
+                <p class="heat">热度指数： 120</p>
                 <div class="check">
-                    <p class="total">共88道题</p>
+                    <p class="total">共14道题</p>
                     <input type="button" class="btn btn-success check_btn" value="查看详情">
                 </div>
             </li>
             <li class="queue_ist">
-                <h4 class="question_title">京东真题</h4>
-                <img  class="question_img" src="https://static.nowcoder.com/images/weblogo/color_logo/jd-80x80.png" alt="">
-                <p class="heat">热度指数： 123</p>
+                <h6 class="question_title">微软2017校招后端笔试题</h6>
+                <img  class="question_img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1515033894261&di=1d115b62d84a521d74cf1ee4fec795cf&imgtype=0&src=http%3A%2F%2Fpic.58pic.com%2F58pic%2F14%2F38%2F52%2F07s58PICpmG_1024.jpg" alt="">
+                <p class="heat">热度指数： 120</p>
                 <div class="check">
-                    <p class="total">共88道题</p>
+                    <p class="total">共19道题</p>
                     <input type="button" class="btn btn-success check_btn" value="查看详情">
                 </div>
             </li>
             <li class="queue_ist">
-                <h4 class="question_title">京东真题</h4>
-                <img  class="question_img" src="https://static.nowcoder.com/images/weblogo/color_logo/jd-80x80.png" alt="">
-                <p class="heat">热度指数： 123</p>
+                <h6 class="question_title">微软2017校招Java笔试题</h6>
+                <img  class="question_img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1515033894261&di=1d115b62d84a521d74cf1ee4fec795cf&imgtype=0&src=http%3A%2F%2Fpic.58pic.com%2F58pic%2F14%2F38%2F52%2F07s58PICpmG_1024.jpg" alt="">
+                <p class="heat">热度指数： 100</p>
                 <div class="check">
-                    <p class="total">共88道题</p>
+                    <p class="total">共15道题</p>
                     <input type="button" class="btn btn-success check_btn" value="查看详情">
                 </div>
             </li>
             <li class="queue_ist">
-                <h4 class="question_title">京东真题</h4>
-                <img  class="question_img" src="https://static.nowcoder.com/images/weblogo/color_logo/jd-80x80.png" alt="">
+                <h6 class="question_title">迅雷2017校招前端笔试题</h6>
+                <img  class="question_img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1515033894261&di=1d115b62d84a521d74cf1ee4fec795cf&imgtype=0&src=http%3A%2F%2Fpic.58pic.com%2F58pic%2F14%2F38%2F52%2F07s58PICpmG_1024.jpg" alt="">
                 <p class="heat">热度指数： 123</p>
                 <div class="check">
-                    <p class="total">共88道题</p>
+                    <p class="total">共25道题</p>
                     <input type="button" class="btn btn-success check_btn" value="查看详情">
                 </div>
             </li>
             <li class="queue_ist">
-                <h4 class="question_title">京东真题</h4>
-                <img  class="question_img" src="https://static.nowcoder.com/images/weblogo/color_logo/jd-80x80.png" alt="">
-                <p class="heat">热度指数： 123</p>
+                <h6 class="question_title">腾讯2016校招后端笔试题</h6>
+                <img  class="question_img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1515033894261&di=1d115b62d84a521d74cf1ee4fec795cf&imgtype=0&src=http%3A%2F%2Fpic.58pic.com%2F58pic%2F14%2F38%2F52%2F07s58PICpmG_1024.jpg" alt="">
+                <p class="heat">热度指数： 1256</p>
                 <div class="check">
-                    <p class="total">共88道题</p>
+                    <p class="total">共18道题</p>
                     <input type="button" class="btn btn-success check_btn" value="查看详情">
                 </div>
             </li>
@@ -124,32 +91,4 @@
 <script>
     //导航栏的选中显示，请修改下面的这行代码，在自己负责的页面部分，写入响应的id
     $('#questionBank').addClass("active");
-    $('#java').click(function () {
-        var allUnivList = [{
-            "id": 3,
-            "univs": [{
-                "id": 1001,
-                "name": "清华大学"
-            },
-                {
-                    "id": 1002,
-                    "name": "北京大学"
-                }],
-            "country_id": 0,
-            "name": "北京"
-        }]
-        $.ajax({
-            url: "../public/index/question_bank.php?action = 'getdata'",
-            type: "post",
-            data: { allcity: allUnivList},
-            success: function (data) {
-                alert(data);
-                console.log(data)
-            },
-            error: function () {
-                alert("系统异常!");
-            }
-        });
-    })
-
 </script>
