完成热门文章热度排序

--- a/application/index/view/course_java/coursejava.html
+++ b/application/index/view/course_java/coursejava.html
@@ -39,10 +39,6 @@
     </script>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="_PUBLIC_/static/assets/js/hover_pack.js"></script>
-  </head>
-
-  <body>
-
 
 
     <div id="headerwrap">
@@ -73,10 +69,8 @@
 				</a>
 				<h1 style="font-family:verdana"><center>就业薪酬</center></h1>
                 <p style="font-family:arial;color:red;font-size:20px;">10K+/月，学员就业薪资高出社会水平53%左右</p>
-				<hr-d>
-				
 			</div>
-			
+
 			<div class="col-lg-4 col-md-4 col-xs-12 desc">
 				<a class="b-link-fade b-animate-go" href="#"><img src=" _PUBLIC_/static/assets/img/portfolio/jeb-img2.png"  width="350"  alt="" />
 					
@@ -84,8 +78,6 @@
 				
 				<h1 style="font-family:verdana"><center>职位缺口</center></h1>
 				<p style="font-family:arial;color:red;font-size:20px;">85464个，Java工程师占软件行业60%、市场人才缺口率达45%</p>
-				<hr-d>
-				
 			</div>
 			
 			<div class="col-lg-4 col-md-4 col-xs-12 desc">
@@ -93,7 +85,7 @@
 				</a>
 				<h1 style="font-family:verdana"><center>互联网企业</center></h1>
 				<p style="font-family:arial;color:red;font-size:20px;">不仅薪资高、逼格高、工作自由而且是未来20年的发展趋势</p>
-				<hr-d>
+
 			</div>
 			
 		</div>
@@ -155,4 +147,11 @@
 			</div>
 		</div>
 	</div>
+		</div>
+	</div>
 {include file="footer"}
+<script>
+    //导航栏的选中显示，请修改下面的这行代码，在自己负责的页面部分，写入响应的id
+    $('#home').addClass("active");
+
+</script>
