--- a/application/index/view/index/home.html
+++ b/application/index/view/index/home.html
@@ -16,21 +16,21 @@
                 <!-- 轮播 -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                        <img class="slide_img" src="https://i1.mifile.cn/a4/xmad_15138394047686_pqrwZ.jpg" alt="">
+                        <img class="slide_img" src="https://uploadfiles.nowcoder.com/images/20180103/4107856_1514947087458_EE0CC9F71A9B6B10A8FD99A7E559A050" alt="">
                         <div class="carousel-caption">
                             <h3>参加培训班</h3>
                         </div>
                     </div>
                     <div class="item">
-                        <img class="slide_img" src="https://i1.mifile.cn/a4/xmad_15141721956707_sixJR.jpg" alt="">
+                        <img class="slide_img" src="http://uploadfiles.nowcoder.com/banner/course_android_960x200.jpg" alt="">
                         <div class="carousel-caption">
-
+                            <h3>Android 开发 基础到实践</h3>
                         </div>
                     </div>
                     <div class="item">
-                        <img class="slide_img" src="http://pic2.ooopic.com/13/33/63/97b1OOOPICb4.jpg" alt="">
+                        <img class="slide_img" src="http://static.nowcoder.com/live/113/960x200.png" alt="">
                         <div class="carousel-caption">
-
+                            <h3>基础算法在面试题中的应用 </h3>
                         </div>
                     </div>
 
@@ -180,7 +180,7 @@
                                 <!--<li class="list-tag"><span><a href='/tags.php?/动画/' class='tag'>动画</a> </span></li> -->
                                 <li class="list-msg">
                                     <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-                                    <span class="glyphicon-class">2407</span>
+                                    <span class="glyphicon-class">{$info.post_heat}</span>
                                     <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
                                     <span class="glyphicon-class">1</span>
                                     <span class="glyphicon glyphicon-bookmark" aria-hidden="true"></span>
@@ -188,7 +188,7 @@
                                 </li>
                                 <li class="update_time">
                                     <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
-                                    <span class="glyphicon-class">17-11-03</span>
+                                    <span class="glyphicon-class">5分钟前</span>
                                 </li>
 
                             </ul>
